# mano-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  changes.md  example_program.txt
docs/: index.html  mano-web-8f3b103be6a3bfad.js  mano-web-8f3b103be6a3bfad_bg.wasm
lib/: Cargo.toml
lib/tests/: assembler_test.rs
mano-cli/: Cargo.toml
mano-cli/src/: main.rs  utils.rs
mano-lib/: Cargo.toml
mano-lib/src/: assembler.rs  cpu.rs  lib.rs  machine.rs  message.rs  registers.rs  storage.rs  utils.rs
mano-lib/tests/: assembler_test.rs
mano-tui/: Cargo.toml
mano-tui/src/: main.rs
mano-web/: Cargo.toml  README.md  Trunk.toml  index.html
mano-web/src/: app.rs  lib.rs  main.rs  main.rs.axum-backup
mano-web/src/components/: assembly.rs  editor.rs  messages.rs  mod.rs  output.rs  state.rs  toolbar.rs
mano-web/static/: index.html
mano-web/styles/: main.css  solarised.css
specs/: README.md  cli.md  tui.md  web.md
