[workspace]
resolver = "3"
members = [
    "mano-lib",
    "mano-cli",
    "mano-tui",
    "mano-web"
]

[workspace.dependencies]
mano-lib = { path = "mano-lib" }
tokio = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"
axum = "0.7"
tower = "0.4"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
