[package]
name = "mano-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mano-web"
path = "src/main.rs"

[dependencies]
mano-lib = { workspace = true, features = ["serde"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }